--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>Hi! I'm Alexandra,</p>
-                        <p>a passionate student interested in developing technological solutions. I am sophomore at Rutgers University-Honors College, enthusiastically seeking for internship experience!
+                        <p>a passionate student interested in developing technological solutions. I am Junior at Rutgers University-Honors College, enthusiastically seeking for internship experience!
                         Throughout my university and personal studies, I am eager to build a stronger foundation
                         in my computer science knowledge, specifically with front and back end development.</p>
                         
@@ -109,6 +109,12 @@
                         <article>
                             <div>
                                 <h3>MATLAB</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                          <article>
+                            <div>
+                                <h3>Python</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
@@ -319,7 +325,7 @@
                 </ul>
             </div>
         </nav>
-        <p>&#169 2025 Alexandra Domanski</p>
+        <p>&#169 2026 Alexandra Domanski</p>
     </footer>
 </div>
 </body>
