--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>Hi! I'm Alexandra,</p>
-                        <p>a passionate student interested in developing technological solutions. I am Junior at Rutgers University-Honors College, enthusiastically seeking for internship experience!
+                        <p>a passionate student interested in developing technological solutions. I am a Junior at Rutgers University-Honors College, enthusiastically seeking for internship experience!
                         Throughout my university and personal studies, I am eager to build a stronger foundation
                         in my computer science knowledge, specifically with front and back end development.</p>
                         
